--- a/index.html
+++ b/index.html
@@ -1,15 +1,150 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donaitons</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
     <script defer src="js/scripts.js"></script>
 </head>
+
 <body>
-    <h1>Please support children</h1>    
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/img/button_15982812.png" alt="Logo" width="40" height="30"
+                    class="d-inline-block align-text-top">
+                Charity123
+            </a>
+            <button class="button"><img src="/img/cart_17658761.png" alt="shopping cart" width="40" height="30"
+                    class="d-inline-block align-text-top"></button>
+        </div>
+    </nav>
+    <header>
+        <h1 class="heading h1 m-4">Please support people in need</h1>
+    </header>
+    <main>
+        <article>
+            <section>
+                <div id="gallery_page">
+                    <div class="container text-center">
+                        <div class="row">
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/food_for_5.jpg" class="card-img-top" alt="Dinner for 5 people" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 10 people</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/food_for100.jpg" class="card-img-top" alt="food for 100 people" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Food for 1000 people</h5>
+                                    <p class="card-text">100€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <div class="card-body">
+                                    <h5 class="card-title">Dinner for 1 person</h5>
+                                    <p class="card-text">1€</p>
+                                    <a href="#" class="btn btn-primary">Buy</a>
+                                </div>
+                            </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </section>
+            <section>
+                <div id="shopping_cart">
+
+                </div>
+            </section>
+            <section>
+                <div id="checkout_page">
+
+                </div>
+            </section>
+        </article>
+    </main>
+    <footer class="bg-body-tertiary text-center text-lg-start footer">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2025 Copyright:
+            <a class="text-body" href="#"> Charity123</a>
+        </div>
+    </footer>
 </body>
+
 </html>
