--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donaitons</title>
+    <title>Donations</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -13,16 +13,18 @@
     <script defer src="js/scripts.js"></script>
 </head>
 
-<body>
-    <nav class="navbar bg-body-tertiary">
+<body class="d-flex flex-column min-vh-100"> <!--classes from bootstrap to make the footer stick to the bottom-->
+    <nav class="navbar bg-body-tertiary"> <!--navbar is from bootstrap-->
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/img/button_15982812.png" alt="Logo" width="40" height="30"
                     class="d-inline-block align-text-top">
                 Charity123
             </a>
-            <button class="button"><img src="/img/cart_17658761.png" alt="shopping cart" width="40" height="30"
-                    class="d-inline-block align-text-top"></button>
+            <button onclick="homeButton(this);" class="button"><img src="/img/home_icon.png" alt="shopping cart"
+                    width="40" height="40" class="d-inline-block align-text-top"></button>
+            <button onclick="openCart(this);" class="button"><img src="/img/cart_17658761.png" alt="shopping cart"
+                    width="40" height="40" class="d-inline-block align-text-top"></button>
         </div>
     </nav>
     <header>
@@ -31,118 +33,153 @@
     <main>
         <article>
             <section>
-                <div id="gallery_page">
+                <div id="gallery_page" class="container">
                     <div class="container text-center">
                         <div class="row">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person">
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 1 person</h5>
                                     <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <a id="dinner_1" onclick="moveToCart(this)" href="#"
+                                        class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/food_for_5.jpg" class="card-img-top" alt="Dinner for 5 people" height="300">
+                                <img src="/img/food_for_5.jpg" class="card-img-top" alt="Dinner for 5 people">
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 10 people</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/food_for100.jpg" class="card-img-top" alt="food for 100 people" height="300">
+                                <img src="/img/food_for100_2.jpg" class="card-img-top" alt="food for 100 people">
                                 <div class="card-body">
                                     <h5 class="card-title">Food for 1000 people</h5>
                                     <p class="card-text">100€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/eye_surgery.jpg" class="card-img-top"
+                                    alt="Eye surgery for a person that can't afford it">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Eye surgery for a person</h5>
+                                    <p class="card-text">3000€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/mobility_aids.jpg" class="card-img-top"
+                                    alt="mobility aids and adaptive equipment for a person that can't afford it">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Mobility aids for a person in need</h5>
+                                    <p class="card-text">200€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/awell.jpg" class="card-img-top"
+                                    alt="Donate to help build a well in Africa">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Donate to help build a well in Africa</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/pink_ribbon.jpg" class="card-img-top" alt="Donate to help fight cancer">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Donate to help fight cancer</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/deforest.jpg" class="card-img-top"
+                                    alt="Donate to help plant trees in deforested areas">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Donate to help plant trees in deforested areas</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/unhoused.jpg" class="card-img-top"
+                                    alt="Donate to help build shelters for the unhoused">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Donate to help build shelters for the unhoused</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/schoolA.jpg" class="card-img-top" alt="Dinner for one person">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Donate to help build schools in Afric</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person" height="300">
+                                <img src="/img/stray_dog.jpg" class="card-img-top" alt="Suppoert local animal shelters">
                                 <div class="card-body">
-                                    <h5 class="card-title">Dinner for 1 person</h5>
-                                    <p class="card-text">1€</p>
-                                    <a href="#" class="btn btn-primary">Buy</a>
+                                    <h5 class="card-title">Support local animal shelters</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
+                            <div class="card" style="width: 18rem;">
+                                <img src="/img/bees.jpg" class="card-img-top" alt="Support a bee-conservation project">
+                                <div class="card-body">
+                                    <h5 class="card-title">Support a bee-conservation project</h5>
+                                    <p class="card-text">5€</p>
+                                    <a href="#" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-            </section>
-            <section>
-                <div id="shopping_cart">
-
+                </div>
                 </div>
             </section>
             <section>
-                <div id="checkout_page">
+                <div id="shopping_cart" class="container d-none">
+                    <h2>This is what you are donating to:</h2>
+                    <button class="button" id="checkout" onclick="checkout(this)">Checkout</button>
+                </div>
+            </section>
+            <section>
+                <div id="checkout_page" class="container d-none">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">I want to receive photos of people I have helped</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
 
                 </div>
             </section>
         </article>
     </main>
-    <footer class="bg-body-tertiary text-center text-lg-start footer">
+    <footer class="bg-body-tertiary text-center text-lg-start footer mt-auto">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2025 Copyright:
-            <a class="text-body" href="#"> Charity123</a>
+            <a class="text-body" href="#">
+                <img src="/img/button_15982812.png" alt="Logo" width="40" height="30"
+                    class="d-inline-block align-text-top">
+                     Charity123</a>
         </div>
     </footer>
 </body>
