--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 1 person</h5>
                                     <p class="card-text">1€</p>
-                                    <a id="dinner_1" onclick="moveToCart(this)" href="#"
+                                    <a id="dinner_1" onclick="moveToCart(this)"
                                         class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 10 people</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="dinner_10" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -58,7 +58,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Food for 1000 people</h5>
                                     <p class="card-text">100€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="food_100" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -67,7 +67,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Eye surgery for a person</h5>
                                     <p class="card-text">3000€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="eye_surgery" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -76,7 +76,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Mobility aids for a person in need</h5>
                                     <p class="card-text">200€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="mobility_aids" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -85,7 +85,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help build a well in Africa</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="well" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -93,7 +93,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help fight cancer</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="cancer" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -102,7 +102,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help plant trees in deforested areas</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="trees" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -111,15 +111,15 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help build shelters for the unhoused</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="shelters" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                                 <img src="/img/schoolA.jpg" class="card-img-top" alt="Dinner for one person">
                                 <div class="card-body">
-                                    <h5 class="card-title">Donate to help build schools in Afric</h5>
+                                    <h5 class="card-title">Donate to help build schools in Africa</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="schools" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -127,7 +127,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Support local animal shelters</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="animal_shelters" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -135,7 +135,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Support a bee-conservation project</h5>
                                     <p class="card-text">5€</p>
-                                    <a href="#" class="btn btn-primary">Donate</a>
+                                    <a id="bee_conservation" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,13 @@
             </section>
             <section>
                 <div id="shopping_cart" class="container d-none">
-                    <h2>This is what you are donating to:</h2>
+                    <h2 class="content">This is what you are donating to:</h2>
+                    <table id="table" class="table m-3">
+                        
+
+
+                    </table>
+                    <p>In total: </p>
                     <button class="button" id="checkout" onclick="checkout(this)">Checkout</button>
                 </div>
             </section>
