--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     class="d-inline-block align-text-top">
                 Charity123
             </a>
-            <button onclick="homeButton(this);" class="button"><img src="/img/home_icon.png" alt="shopping cart"
+            <button onclick="homeButton(this);" class="button"><img src="/img/home_icon.png" alt="Back to the home page"
                     width="40" height="40" class="d-inline-block align-text-top"></button>
             <button onclick="openCart(this);" class="button"><img src="/img/cart_17658761.png" alt="shopping cart"
                     width="40" height="40" class="d-inline-block align-text-top"></button>
@@ -36,8 +36,8 @@
                     <div class="container text-center">
                         <div class="row">
 
-                            <div class="card col-md-3 col-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/dinner_for1.jpg" class="card-img-top" alt="Dinner for one person">
+                            <div class="card col-md-3 col-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/dinner_for1.jpg" class="card-img-top rounded" alt="Dinner for one person">
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 1 person</h5>
                                     <p class="card-text">1€</p>
@@ -45,24 +45,24 @@
                                 </div>
                             </div>
 
-                            <div class="card col-md-3 col-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/food_for_5.jpg" class="card-img-top" alt="Dinner for 5 people">
+                            <div class="card col-md-3 col-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/food_for_5.jpg" class="card-img-top rounded" alt="Dinner for 5 people">
                                 <div class="card-body">
                                     <h5 class="card-title">Dinner for 10 people</h5>
                                     <p class="card-text">5€</p>
                                     <a id="dinner_10" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/food_for100_2.jpg" class="card-img-top" alt="food for 100 people">
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/food_for100_2.jpg" class="card-img-top rounded" alt="food for 100 people">
                                 <div class="card-body">
                                     <h5 class="card-title">Food for 1000 people</h5>
                                     <p class="card-text">100€</p>
                                     <a id="food_100" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/eye_surgery.jpg" class="card-img-top"
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/eye_surgery.jpg" class="card-img-top rounded"
                                     alt="Eye surgery for a person who can't afford it">
                                 <div class="card-body">
                                     <h5 class="card-title">Eye surgery for a person</h5>
@@ -70,8 +70,8 @@
                                     <a id="eye_surgery" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/mobility_aids.jpg" class="card-img-top"
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/mobility_aids.jpg" class="card-img-top rounded"
                                     alt="mobility aids and adaptive equipment for a person that can't afford it">
                                 <div class="card-body">
                                     <h5 class="card-title">Mobility aids for a person in need</h5>
@@ -79,8 +79,8 @@
                                     <a id="mobility_aids" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/awell.jpg" class="card-img-top"
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/awell.jpg" class="card-img-top rounded"
                                     alt="Donate to help build a well in Africa">
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help build a well in Africa</h5>
@@ -88,16 +88,16 @@
                                     <a id="well" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/pink_ribbon.jpg" class="card-img-top" alt="Donate to help fight cancer">
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/pink_ribbon.jpg" class="card-img-top rounded" alt="Donate to help fight cancer">
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help fight cancer</h5>
                                     <p class="card-text">5€</p>
                                     <a id="cancer" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/deforest.jpg" class="card-img-top"
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/deforest.jpg" class="card-img-top rounded"
                                     alt="Donate to help plant trees in deforested areas">
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help plant trees in deforested areas</h5>
@@ -105,8 +105,8 @@
                                     <a id="trees" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div> 
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/unhoused.jpg" class="card-img-top"
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/unhoused.jpg" class="card-img-top rounded"
                                     alt="Donate to help build shelters for the unhoused">
                                 <div class="card-body">
                                     <h5 class="card-title">Help build shelters for the unhoused</h5>
@@ -114,16 +114,16 @@
                                     <a id="shelters" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/schoolA.jpg" class="card-img-top" alt="Dinner for one person">
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/schoolA.jpg" class="card-img-top rounded" alt="Dinner for one person">
                                 <div class="card-body">
                                     <h5 class="card-title">Donate to help build schools in Africa</h5>
                                     <p class="card-text">5€</p>
                                     <a id="schools" onclick="moveToCart(this)" class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/stray_dog.jpg" class="card-img-top" alt="Support local animal shelters">
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/stray_dog.jpg" class="card-img-top rounded" alt="Support local animal shelters">
                                 <div class="card-body">
                                     <h5 class="card-title">Support local animal shelters</h5>
                                     <p class="card-text">5€</p>
@@ -131,8 +131,8 @@
                                         class="btn btn-primary">Donate</a>
                                 </div>
                             </div>
-                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow" style="width: 18rem;">
-                                <img src="/img/bees.jpg" class="card-img-top" alt="Support a bee-conservation project">
+                            <div class="card col-md-3 col-xs-12 m-auto mb-4 shadow p-2" style="width: 18rem;">
+                                <img src="/img/bees.jpg" class="card-img-top rounded" alt="Support a bee-conservation project">
                                 <div class="card-body">
                                     <h5 class="card-title">Support a bee-conservation project</h5>
                                     <p class="card-text">5€</p>
@@ -217,7 +217,7 @@
                             <label for="cardNumber" class="form-label">Card Number</label>
                             <input type="text" pattern="[0-9]{13,19}"  class="form-control" id="cardNumber" name="cardNumber" required>
                             <div class="invalid-feedback">
-                                Please provide a Card Number.
+                                Please provide a valid Card Number.
                             </div>
                         </div>
                         <div class="col-md-4">
